replaced arraylist to linked list where we remove first element